--- a/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
+++ b/KGERP/Views/BillRequisition/BillOfQuotation.cshtml
@@ -15,7 +15,7 @@
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Requisition BOQ</li>
+        <li class="active">Bill of Quotation</li>
     </ol>
 </section>
 
@@ -34,46 +34,64 @@
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Project Type :</label>
-                                @Html.DropDownListFor(model => model.CostCenterTypeId, new SelectList(Model.Accounting_CostCenterTypes, "CostCenterTypeId", "Name"), "=== Select Project Type ===", new { id = "ddlCostCenterTypeId", onchange = "getProjectList()", @class = "form-control searchingDropdown", style = "width:100%" })
-                                @Html.ValidationMessageFor(model => model.CostCenterTypeId, "", new { @class = "text-danger" })
+                                <label asp-for="ProjectId">Select Project :</label>
+                                @Html.DropDownListFor(model => model.ProjectId, new SelectList(Model.Projects.OrderBy(order => order.Name).OrderBy(order => order.Name), "CostCenterId", "Name"), "=== Select Project ===", new { id = "ddlProjectId", onchange = "getBoqDivisionList()", @class = "form-control searchingDropdown", style = "width:100%" })
+                                @Html.ValidationMessageFor(model => model.ProjectId, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Select Project :</label>
-                                @Html.DropDownListFor(model => model.CostCenterId, new SelectList(Model.Accounting_CostCenters, "CostCenterId", "Name"), "=== Select Project ===", new { id = "ddlCostCenterId", @class = "form-control searchingDropdown", style = "width:100%" })
-                                @Html.ValidationMessageFor(model => model.CostCenterId, "", new { @class = "text-danger" })
+                                <label asp-for="BoQDivisionId">Select Division :</label>
+                                @Html.DropDownListFor(model => model.BoQDivisionId, new SelectList(Model.BoQDivisions.OrderBy(order => order.Name), "BoQDivisionId", "Name"), "=== Select BoQ Division ===", new { id = "ddlBoQDivisionId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                @Html.ValidationMessageFor(model => model.BoQDivisionId, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label asp-for="Name" class="form-control-label">Name:</label>
-                                @Html.TextBoxFor(model => model.Name, new { id = "txtRequisitionBoqName", @class = "form-control", @placeholder = "Requisition BoQ Name", required = "true" })
+                                <label asp-for="BoQNumber" class="form-control-label">BoQ Number :</label>
+                                @Html.TextBoxFor(model => model.BoQNumber, new { id = "txtBoqItemNumber", @class = "form-control", @placeholder = "BoQ Item Number", required = "true" })
+                                @Html.ValidationMessageFor(model => model.BoQNumber, "", new { id = "nameExist", @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label asp-for="Name" class="form-control-label">BoQ Item Name :</label>
+                                @Html.TextBoxFor(model => model.Name, new { id = "txtBoqItemName", @class = "form-control", @placeholder = "BoQ Item Name", required = "true" })
                                 @Html.ValidationMessageFor(model => model.Name, "", new { id = "nameExist", @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label asp-for="Name" class="form-control-label">BoQ Amount:</label>
-                                @Html.TextBoxFor(model => model.BoQAmount, new { id = "txtRequisitionBoqAmount", @class = "form-control", @placeholder = "BoQ Amount", required = "true" })
-                                @Html.ValidationMessageFor(model => model.BoQAmount, "", new { id = "nameExist", @class = "text-danger" })
+                                <label asp-for="BoqUnitId" class="form-control-label">Select BoQ Unit :</label>
+                                @Html.DropDownListFor(model => model.BoqUnitId, new SelectList(Model.BoQUnits.Where(c=>c.IsBoQUnit == true).OrderBy(order=>order.Name), "UnitId", "Name"), "=== Select BoQ Unit ===", new { id = "ddlBoqUnitId", @class = "form-control searchingDropdown", style = "width:100%" })
+                                @Html.ValidationMessageFor(model => model.BoqUnitId, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label asp-for="Description" class="form-control-label">Description:</label>
-                                @Html.TextAreaFor(model => model.Description, new { id = "txtRequisitionBoqDescription", @class = "form-control", @placeholder = "Requisition BoQ Description", required = "true" })
+                                <label asp-for="BoqQuantity" class="form-control-label">Quantity :</label>
+                                @Html.TextBoxFor(model => model.BoqQuantity, new { id = "txtBoqQuantity", @class = "form-control", @placeholder = "BoQ BoqQuantity", required = "true" })
+                                @Html.ValidationMessageFor(model => model.BoqQuantity, "", new { id = "nameExist", @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label asp-for="Description" class="form-control-label">BoQ Description/Notes :</label>
+                                @Html.TextAreaFor(model => model.Description, new { id = "txtBoqDescription", @class = "form-control", @placeholder = "BoQ Description/Notes", required = "true" })
                                 @Html.ValidationMessageFor(model => model.Description, "", new { id = "nameExist", @class = "text-danger" })
                             </div>
                         </div>
 
+                        <div class="col-md-6"></div>
+
                         <div class="col-md-6">
-                            <div class="form-group" style="margin-top: 35px !important">
+                            <div class="form-group">
                                 <div class="col-md-6">
                                     <button type="button" onclick="resetForm()" class="btn btn-secondary" data-dismiss="modal" style="width:100% !important">Reset</button>
                                 </div>
@@ -85,7 +103,7 @@
 
                     </div>
 
-                </div>
+                    </div>
             </div>
         </div>
     </section>
@@ -105,22 +123,32 @@
                             <thead>
                                 <tr>
                                     <th>SL</th>
-                                    <th>BoQ Name</th>
+                                    <th>Division Name</th>
+                                    <th>BoQ No</th>
+                                    <th>BoQ Item Name</th>
+                                    <th>BoQ Unit</th>
+                                    <th>Quantity</th>
                                     <th>Description</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
                             @{int sl = 0;}
                             <tbody>
-                                @foreach (var item in Model.BillBoQItems)
+                                @foreach (var item in Model.BillBoQItems.OrderBy(order=>order.BoQDivisionId))
                                 {
                                     <tr>
                                         <td>
                                             @(++sl)
-                                            <input type="hidden" id="requisitionBoQ_@item.BoQItemId" name="BoQItemId" value="@item.BoQItemId" />
+                                            <input type="hidden" id="boqProjectId_@item.BoQItemId" name="ProjectId" value="@Model.BoQDivisions.FirstOrDefault(c=>c.BoQDivisionId == item.BoQDivisionId ).ProjectId" />
+                                            <input type="hidden" id="boqDivisionId_@item.BoQItemId" name="BoQDivisionId" value="@item.BoQDivisionId" />
+                                            <input type="hidden" id="boqUnitId_@item.BoQItemId" name="BoqUnitId" value="@item.BoqUnitId" />
                                         </td>
-                                        <td id="tdRequisitionBoQName_@item.BoQItemId">@item.Name</td>
-                                        <td id="tdRequisitionBoQDescription_@item.BoQItemId">@item.Description</td>
+                                        <td id="tdBoqDivisionId_@item.BoQItemId">@Model.BoQDivisions.FirstOrDefault(c => c.BoQDivisionId == item.BoQDivisionId).Name</td>
+                                        <td id="tdBoqNumber_@item.BoQItemId" class="text-center">@item.BoQNumber</td>
+                                        <td id="tdBoqName_@item.BoQItemId">@item.Name</td>
+                                        <td id="tdBoqUnitId_@item.BoQItemId">@Model.BoQUnits.FirstOrDefault(c => c.UnitId == item.BoqUnitId).Name</td>
+                                        <td id="tdBoqQuantity_@item.BoQItemId">@item.BoqQuantity</td>
+                                        <td id="tdBoqDescription_@item.BoQItemId">@item.Description</td>
                                         <td>
                                             <a id="@item.BoQItemId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
@@ -184,10 +212,13 @@
                 $('#ReBoQItemId').val(rowId);
                 $('#ActionId').val(2);
                 $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Update");
-                $('#txtRequisitionBoqName').val($('#tdRequisitionBoQName_' + rowId).text().trim());
-                $('#txtRequisitionBoqAmount').val($('#tdRequisitionBoQAmount_' + rowId).text().trim());
-                $('#txtRequisitionBoqDescription').val($('#tdRequisitionBoQDescription_' + rowId).text().trim());
-                $('#ddlCostCenterId').val($('#tdRequisitionBoQProjectName_' + rowId).val().trim()).trigger('change');
+                $('#txtBoqItemNumber').val($('#tdBoqNumber_' + rowId).text().trim());
+                $('#txtBoqItemName').val($('#tdBoqName_' + rowId).text().trim());
+                $('#txtBoqQuantity').val($('#tdBoqQuantity_' + rowId).text().trim());
+                $('#txtBoqDescription').val($('#tdBoqDescription_' + rowId).text().trim());
+                $('#ddlProjectId').val($('#boqProjectId_' + rowId).val().trim()).trigger('change');
+                getBoqDivisionList(rowId);
+                $('#ddlBoqUnitId').val($('#boqUnitId_' + rowId).val().trim()).trigger('change');
                 window.scrollTo({ top: 0, behavior: 'smooth' });
             }
         }
@@ -205,32 +236,33 @@
             $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Add");
         }
 
-        function getProjectList() {
-            var getProjectId = $("#ddlCostCenterTypeId option:selected");
-            var showprojectList = $("#ddlCostCenterId");
-
-            console.log("Selected Project ID:", getProjectId.val());
+        function getBoqDivisionList(rowId) {
+            var getProjectId = $("#ddlProjectId option:selected");
+            var showBoqDivisionList = $("#ddlBoQDivisionId");
 
             $.ajax({
                 type: "GET",
-                url: "/BillRequisition/GetProjectList",
+                url: "/BillRequisition/getBoqDivisionList",
                 dataType: "json",
                 data: { id: getProjectId.val() },
                 success: function (data) {
-
-                    showprojectList.empty();
+                    showBoqDivisionList.empty();
 
                     $.each(data, function (index, item) {
-                        showprojectList.append($('<option>', {
-                            value: item.CostCenterId,
+                        showBoqDivisionList.append($('<option>', {
+                            value: item.BoQDivisionId,
                             text: item.Name
                         }));
                     });
                 },
                 error: function (error) {
                     console.error("Error in AJAX request:", error);
+                },
+                complete: function () {
+                    showBoqDivisionList.val($('#boqDivisionId_' + rowId).val().trim()).trigger('change');
                 }
             });
         }
+
     </script>
 }
