--- a/KGERP/Views/Configuration/CommonUnit.cshtml
+++ b/KGERP/Views/Configuration/CommonUnit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KGERP.Service.Implementation.Configuration.VMCommonUnit
 @{
 
-    ViewData["Title"] = "Unit";
+    ViewData["Title"] = "Material Unit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -14,11 +14,11 @@
 
 <section class="content-header">
     <h1>
-        Unit
+        Material Unit
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Unit</li>
+        <li class="active">Material Unit</li>
     </ol>
 </section>
 
