--- a/KGERP/Views/Configuration/CommonUnit.cshtml
+++ b/KGERP/Views/Configuration/CommonUnit.cshtml
@@ -40,7 +40,7 @@
                                 @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
 
                                 <div class="form-group">
-                                    <label>Unit Name :</label>
+                                    <label>Material Unit Name :</label>
                                     @Html.TextBoxFor(model => model.Name, new { id = "txtUnitName", @class = "form-control input-sm", @placeholder = "Unit Name", required = "true", })
                                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                 </div>
