--- a/KGERP/Views/Configuration/CommonFinishProduct.cshtml
+++ b/KGERP/Views/Configuration/CommonFinishProduct.cshtml
@@ -61,8 +61,8 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label for="message-text" class="col-form-label">Select Unit:</label>
-                                            @Html.DropDownListFor(model => model.Common_UnitFk, Model.UnitList.OrderBy(order=> order.Text) as SelectList, "---Select Unit---", new { id = "ddlCommonUnitFk", @class = "form-control", required = "required" })
-                                            @Html.ValidationMessageFor(model => model.Common_UnitFk, "", new { @class = "text-danger" })
+                                            @{var orderedUnitList = Model.UnitList.OrderBy(order => order.Text).ToList();}
+                                            @Html.DropDownListFor(model => model.Common_UnitFk, new SelectList(orderedUnitList, "Value", "Text"),"===Select Unit===",new { id = "ddlCommonUnitFk", @class = "form-control", required = "required" })
                                         </div>
                                     </div>
                                 </div>
